--- a/.github/workflows/python_script_on_update.yml
+++ b/.github/workflows/python_script_on_update.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt # If you have any dependencies
+          #pip install -r requirements.txt # If you have any dependencies
 
       - name: Run Python Script
         run: python Scripts/GitAutoMationPOCCodeWithComments.py # Replace with your script's path
