--- a/.github/workflows/notebook.yml
+++ b/.github/workflows/notebook.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Execute Jupyter notebook
         run: |
-          jupyter nbconvert --to notebook --execute Scripts/CICD.ipynb --output Scripts/Output/CICD.ipynb
+          jupyter nbconvert --to notebook --execute Scripts/CICD.ipynb --output Output/CICD.ipynb
 
       
         env:
