--- a/.github/workflows/notebook.yml
+++ b/.github/workflows/notebook.yml
@@ -10,11 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository
-        uses: actions/checkout@v2
-        
+        uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v3
         with:
           python-version: '3.x'
 
@@ -25,8 +24,14 @@ jobs:
 
       - name: Execute Jupyter notebook
         run: |
-          jupyter nbconvert --to notebook --execute Scripts/CICD.ipynb 
+          jupyter nbconvert --to notebook --execute Scripts/CICD.ipynb --output Scripts/CICD.ipynb
 
-      
+      - name: Commit and push if there are changes
+        run: |
+          git config --global user.email "actions@github.com"
+          git config --global user.name "GitHub Actions"
+          git add Scripts/CICD.ipynb
+          git commit -m "Execute Jupyter notebook" || echo "No changes to commit"
+          git push origin || echo "No changes to push"
         env:
           TOKENGIT: ${{ secrets.TOKENGIT }}
