--- a/.github/workflows/notebook.yml
+++ b/.github/workflows/notebook.yml
@@ -24,14 +24,8 @@ jobs:
 
       - name: Execute Jupyter notebook
         run: |
-          jupyter nbconvert --to notebook --execute Scripts/CICD.ipynb --output Scripts/CICD.ipynb
+          jupyter nbconvert --to notebook --execute Scripts/CICD.ipynb 
 
-      - name: Commit and push if there are changes
-        run: |
-          git config --global user.email "actions@github.com"
-          git config --global user.name "GitHub Actions"
-          git add Scripts/CICD.ipynb
-          git commit -m "Execute Jupyter notebook" || echo "No changes to commit"
-          git push origin || echo "No changes to push"
+      
         env:
           TOKENGIT: ${{ secrets.TOKENGIT }}
