--- a/.github/workflows/notebook.yml
+++ b/.github/workflows/notebook.yml
@@ -21,6 +21,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install jupyter nbconvert
+          
+      - name: Create Output directory
+        run: mkdir -p Output
 
       - name: Execute Jupyter notebook
         run: |
